<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android">
<ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:paddingBottom="16dp"
                                             android:layout_height="wrap_content">

    <TextView
            android:layout_width="0dp"
            style="@style/linea"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/hobbie4"
            android:layout_marginBottom="23dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/boton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <CheckBox
            android:text="@string/hobbie2"
            style="@style/texto_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hobbie2"
            app:layout_constraintStart_toStartOf="@+id/hobbie1" app:layout_constraintTop_toBottomOf="@+id/hobbie1"
            android:layout_marginBottom="1dp" app:layout_constraintBottom_toTopOf="@+id/hobbie3"/>
    <CheckBox
            android:text="@string/hobbie3"
            style="@style/texto_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hobbie1" android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp" app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4" app:layout_constraintBottom_toTopOf="@+id/hobbie2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/hint_nombre"
            style="@style/texto_normal"
            android:ems="10"
            android:id="@+id/nombre"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView5"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toTopOf="@+id/contrasena"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/texto_normal"
            android:ems="10"
            android:hint="@string/hint_contrasena"
            android:id="@+id/contrasena"
            app:layout_constraintStart_toStartOf="@+id/nombre" app:layout_constraintTop_toBottomOf="@+id/nombre"
            app:layout_constraintBottom_toTopOf="@+id/contrasena2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            style="@style/texto_normal"
            android:hint="@string/hint_repite_contrasena"
            android:ems="10"
            android:id="@+id/contrasena2"
            app:layout_constraintStart_toStartOf="@+id/contrasena" app:layout_constraintTop_toBottomOf="@+id/contrasena"
            app:layout_constraintBottom_toTopOf="@+id/correo"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/hint_correo"
            android:ems="10"
            style="@style/texto_normal"
            android:id="@+id/correo"
            app:layout_constraintStart_toStartOf="@+id/contrasena2" app:layout_constraintTop_toBottomOf="@+id/contrasena2"
            android:layout_marginBottom="2dp" app:layout_constraintBottom_toTopOf="@+id/fecha"/>
    <TextView
            android:layout_width="0dp"
            style="@style/linea"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/fecha"
            android:layout_marginBottom="7dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/ciudad" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ciudad"
            style="@style/texto_normal"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintStart_toEndOf="@+id/radioGroup3"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="69dp"
            app:layout_constraintBottom_toTopOf="@+id/textView4" android:layout_marginEnd="26dp"
            android:layout_marginRight="26dp" android:layout_marginTop="16dp"/>
    <CheckBox
            android:text="@string/hobbie4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/texto_normal"
            android:id="@+id/hobbie3"
            app:layout_constraintStart_toStartOf="@+id/hobbie2" app:layout_constraintTop_toBottomOf="@+id/hobbie2"
            app:layout_constraintBottom_toTopOf="@+id/hobbie4"/>
    <CheckBox
            android:text="@string/hobbie1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hobbie4"
            style="@style/texto_normal"
            app:layout_constraintStart_toStartOf="@+id/hobbie3" app:layout_constraintTop_toBottomOf="@+id/hobbie3"
            android:layout_marginBottom="31dp" app:layout_constraintBottom_toTopOf="@+id/textView3"/>
    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup3" android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toStartOf="@+id/ciudad"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" android:layout_marginEnd="98dp" android:layout_marginRight="98dp">
        <RadioButton
                android:checked="true"
                android:text="@string/masculino"
                style="@style/texto_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="414dp"
                tools:layout_editor_absoluteX="60dp" android:id="@+id/radio_masculino"/>
        <RadioButton
                android:text="@string/femenino"
                style="@style/texto_normal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" tools:layout_editor_absoluteY="446dp"
                tools:layout_editor_absoluteX="59dp" android:id="@+id/radio_femenino"/>
    </RadioGroup>
    <Button
            android:text="@string/boton_aceptar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/texto_botones"
            android:id="@+id/boton"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:hint="@string/fecha"
            android:clickable="true"
            style="@style/texto_normal"
            android:ems="10"
            android:id="@+id/fecha"
            app:layout_constraintStart_toStartOf="@+id/correo" app:layout_constraintTop_toBottomOf="@+id/correo"
            android:layout_marginBottom="32dp" app:layout_constraintBottom_toTopOf="@+id/textView"
            android:autofillHints="@string/fecha"/>
    <TextView
            android:text="@string/hobbies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            style="@style/texto_subtitulo"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp" app:layout_constraintTop_toBottomOf="@+id/ciudad"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/hobbie1"/>
    <TextView
            android:text="@string/punto1_tv_formularios"
            style="@style/texto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" android:layout_marginBottom="60dp"
            app:layout_constraintBottom_toTopOf="@+id/nombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/respuesta"
            style="@style/texto_normal"
            app:layout_constraintTop_toBottomOf="@+id/boton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
    />


</android.support.constraint.ConstraintLayout>
    </ScrollView>
</RelativeLayout>