<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <Spinner
            android:layout_width="155dp"
            android:layout_height="25dp"
            android:id="@+id/espiner_origen"
            app:layout_constraintBottom_toBottomOf="@+id/textView7" app:layout_constraintTop_toTopOf="@+id/textView7"
            app:layout_constraintStart_toEndOf="@+id/textView7" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/a"
            style="@style/texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView7"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/textView7"/>
    <TextView
            android:text="@string/conversor_moneda"
            style="@style/texto_titulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:hint="ingrese el valor a convertir"
            style="@style/texto_normal"
            android:ems="10"
            android:id="@+id/tv_entrada"
            app:layout_constraintStart_toStartOf="@+id/spiner_destino"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/spiner_destino"/>
    <TextView
            android:text="@string/convertir_de"
            style="@style/texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <Spinner
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:id="@+id/spiner_destino"
            app:layout_constraintTop_toTopOf="@+id/textView8"
            app:layout_constraintBottom_toBottomOf="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/espiner_origen"
            app:layout_constraintEnd_toEndOf="@+id/espiner_origen"/>
    <TextView
            style="@style/linea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_entrada" android:layout_marginTop="16dp"/>
    <TextView
            android:text="@string/respuesta"
            style="@style/texto_subtitulo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:layout_marginTop="8dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_salida" app:layout_constraintStart_toEndOf="@+id/textView10"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintTop_toTopOf="@+id/textView10"/>

    <ImageView
            android:layout_width="238dp"
            android:layout_height="0dp" app:srcCompat="@drawable/worldwide" android:id="@+id/imageView5"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="14dp" android:layout_marginRight="14dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="44dp"
            android:layout_marginStart="44dp" app:layout_constraintTop_toBottomOf="@+id/tv_salida"
            android:layout_marginTop="44dp" android:layout_marginBottom="44dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="164dp" app:srcCompat="@drawable/coins"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintBottom_toBottomOf="@+id/imageView5" android:layout_marginBottom="12dp"/>
</android.support.constraint.ConstraintLayout>